--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "test",
     "start":"node/app.js",
-    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix clint && npm run build --prefix clint"
+    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
   "author": "",
